feat: 添加 Excel 处理脚本 - read_excel_head.py: 读取前N行判断表头结构 - filter_excel.py: 根据列名和值剔除数据行

--- a/.gitignore
+++ b/.gitignore
@@ -179,3 +179,14 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# Examples folder (示例 Excel 文件)
+examples/
+
+# IDE / Editor
+.vscode/
+.kiro/
+.idea/
+
+# uv init 生成的默认文件
+main.py
